--- a/app/javascript/components/Stepper/Stepper.scss
+++ b/app/javascript/components/Stepper/Stepper.scss
@@ -102,7 +102,6 @@
 #fundraiser-component.fundraiser-bar--freestanding {
   z-index: 1;
   clear: both;
-  overflow: hidden;
   margin-bottom: 160px;
 }
 
